feat(lab-10): final state

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="components/WelcomeController.js"></script>
   <script src="components/JokeController.js"></script>
   <script src="components/RecommendController.js"></script>
+  <script src="components/ChuckController.js"></script>
   <script src="services/StorageService.js"></script>
   <script src="services/DownloadService.js"></script>
   <script src="services/RecommendService.js"></script>
