feat(gulp): add gulpfile and build directory, modify index.html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
-  <script src="components/MainController.js"></script>
-  <script src="components/NavController.js"></script>
-  <script src="components/WelcomeController.js"></script>
-  <script src="components/JokeController.js"></script>
-  <script src="components/ChuckController.js"></script>
-  <script src="services/StorageService.js"></script>
-  <script src="services/DownloadService.js"></script>
-  <script src="services/RecommendService.js"></script>
-  <script src="app.js"></script>
+  <script src="build/bundle.js"></script>
 </head>
 
 <body ng-app="app">
