--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
+  <script src="node_modules/lodash/lodash.min.js"></script>
   <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
   <script src="build/bundle.js"></script>
 </head>
