--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/lodash/lodash.min.js"></script>
   <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.11/pixi.min.js"></script>
   <script src="build/bundle.js"></script>
 </head>
 
